logs/flask-debugtb-elasticsearch.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/Flask-0.12.2.dist-info'...
Listing './lib/python3.5/site-packages/Flask_DebugToolbar-0.10.1.dist-info'...
Listing './lib/python3.5/site-packages/Jinja2-2.10.dist-info'...
Listing './lib/python3.5/site-packages/MarkupSafe-1.0.egg-info'...
Listing './lib/python3.5/site-packages/Werkzeug-0.14.1.dist-info'...
Listing './lib/python3.5/site-packages/blinker'...
Listing './lib/python3.5/site-packages/blinker-1.4.egg-info'...
Listing './lib/python3.5/site-packages/click'...
Listing './lib/python3.5/site-packages/click-6.7.dist-info'...
Listing './lib/python3.5/site-packages/elasticsearch'...
Listing './lib/python3.5/site-packages/elasticsearch/client'...
Listing './lib/python3.5/site-packages/elasticsearch/connection'...
Listing './lib/python3.5/site-packages/elasticsearch/helpers'...
Listing './lib/python3.5/site-packages/elasticsearch-6.1.1.dist-info'...
Listing './lib/python3.5/site-packages/flask'...
Listing './lib/python3.5/site-packages/flask/ext'...
Listing './lib/python3.5/site-packages/flask_debugtb_elasticsearch'...
Listing './lib/python3.5/site-packages/flask_debugtb_elasticsearch/templates'...
Listing './lib/python3.5/site-packages/flask_debugtb_elasticsearch-0.1.4.egg-info'...
Listing './lib/python3.5/site-packages/flask_debugtoolbar'...
Listing './lib/python3.5/site-packages/flask_debugtoolbar/panels'...
Listing './lib/python3.5/site-packages/flask_debugtoolbar/static'...
Listing './lib/python3.5/site-packages/flask_debugtoolbar/static/codemirror'...
Listing './lib/python3.5/site-packages/flask_debugtoolbar/static/codemirror/mode'...
Listing './lib/python3.5/site-packages/flask_debugtoolbar/static/codemirror/mode/clike'...
Listing './lib/python3.5/site-packages/flask_debugtoolbar/static/codemirror/mode/clojure'...
Listing './lib/python3.5/site-packages/flask_debugtoolbar/static/codemirror/mode/coffeescript'...
Listing './lib/python3.5/site-packages/flask_debugtoolbar/static/codemirror/mode/css'...
Listing './lib/python3.5/site-packages/flask_debugtoolbar/static/codemirror/mode/diff'...
Listing './lib/python3.5/site-packages/flask_debugtoolbar/static/codemirror/mode/ecl'...
Listing './lib/python3.5/site-packages/flask_debugtoolbar/static/codemirror/mode/gfm'...
Listing './lib/python3.5/site-packages/flask_debugtoolbar/static/codemirror/mode/go'...
Listing './lib/python3.5/site-packages/flask_debugtoolbar/static/codemirror/mode/groovy'...
Listing './lib/python3.5/site-packages/flask_debugtoolbar/static/codemirror/mode/haskell'...
Listing './lib/python3.5/site-packages/flask_debugtoolbar/static/codemirror/mode/htmlembedded'...
Listing './lib/python3.5/site-packages/flask_debugtoolbar/static/codemirror/mode/htmlmixed'...
Listing './lib/python3.5/site-packages/flask_debugtoolbar/static/codemirror/mode/javascript'...
Listing './lib/python3.5/site-packages/flask_debugtoolbar/static/codemirror/mode/jinja2'...
Listing './lib/python3.5/site-packages/flask_debugtoolbar/static/codemirror/mode/less'...
Listing './lib/python3.5/site-packages/flask_debugtoolbar/static/codemirror/mode/lua'...
Listing './lib/python3.5/site-packages/flask_debugtoolbar/static/codemirror/mode/markdown'...
Listing './lib/python3.5/site-packages/flask_debugtoolbar/static/codemirror/mode/mysql'...
Listing './lib/python3.5/site-packages/flask_debugtoolbar/static/codemirror/mode/ntriples'...
Listing './lib/python3.5/site-packages/flask_debugtoolbar/static/codemirror/mode/pascal'...
Listing './lib/python3.5/site-packages/flask_debugtoolbar/static/codemirror/mode/perl'...
Listing './lib/python3.5/site-packages/flask_debugtoolbar/static/codemirror/mode/php'...
Listing './lib/python3.5/site-packages/flask_debugtoolbar/static/codemirror/mode/plsql'...
Listing './lib/python3.5/site-packages/flask_debugtoolbar/static/codemirror/mode/properties'...
Listing './lib/python3.5/site-packages/flask_debugtoolbar/static/codemirror/mode/python'...
Listing './lib/python3.5/site-packages/flask_debugtoolbar/static/codemirror/mode/r'...
Listing './lib/python3.5/site-packages/flask_debugtoolbar/static/codemirror/mode/rpm'...
Listing './lib/python3.5/site-packages/flask_debugtoolbar/static/codemirror/mode/rpm/changes'...
Listing './lib/python3.5/site-packages/flask_debugtoolbar/static/codemirror/mode/rpm/spec'...
Listing './lib/python3.5/site-packages/flask_debugtoolbar/static/codemirror/mode/rst'...
Listing './lib/python3.5/site-packages/flask_debugtoolbar/static/codemirror/mode/ruby'...
Listing './lib/python3.5/site-packages/flask_debugtoolbar/static/codemirror/mode/rust'...
Listing './lib/python3.5/site-packages/flask_debugtoolbar/static/codemirror/mode/scheme'...
Listing './lib/python3.5/site-packages/flask_debugtoolbar/static/codemirror/mode/smalltalk'...
Listing './lib/python3.5/site-packages/flask_debugtoolbar/static/codemirror/mode/smarty'...
Listing './lib/python3.5/site-packages/flask_debugtoolbar/static/codemirror/mode/sparql'...
Listing './lib/python3.5/site-packages/flask_debugtoolbar/static/codemirror/mode/stex'...
Listing './lib/python3.5/site-packages/flask_debugtoolbar/static/codemirror/mode/tiddlywiki'...
Listing './lib/python3.5/site-packages/flask_debugtoolbar/static/codemirror/mode/vbscript'...
Listing './lib/python3.5/site-packages/flask_debugtoolbar/static/codemirror/mode/velocity'...
Listing './lib/python3.5/site-packages/flask_debugtoolbar/static/codemirror/mode/verilog'...
Listing './lib/python3.5/site-packages/flask_debugtoolbar/static/codemirror/mode/xml'...
Listing './lib/python3.5/site-packages/flask_debugtoolbar/static/codemirror/mode/xmlpure'...
Listing './lib/python3.5/site-packages/flask_debugtoolbar/static/codemirror/mode/xquery'...
Listing './lib/python3.5/site-packages/flask_debugtoolbar/static/codemirror/mode/xquery/test'...
Listing './lib/python3.5/site-packages/flask_debugtoolbar/static/codemirror/mode/yaml'...
Listing './lib/python3.5/site-packages/flask_debugtoolbar/static/codemirror/theme'...
Listing './lib/python3.5/site-packages/flask_debugtoolbar/static/codemirror/util'...
Listing './lib/python3.5/site-packages/flask_debugtoolbar/static/css'...
Listing './lib/python3.5/site-packages/flask_debugtoolbar/static/img'...
Listing './lib/python3.5/site-packages/flask_debugtoolbar/static/js'...
Listing './lib/python3.5/site-packages/flask_debugtoolbar/templates'...
Listing './lib/python3.5/site-packages/flask_debugtoolbar/templates/panels'...
Listing './lib/python3.5/site-packages/itsdangerous-0.24.egg-info'...
Listing './lib/python3.5/site-packages/jinja2'...
Compiling './lib/python3.5/site-packages/jinja2/asyncfilters.py'...
***   File "./lib/python3.5/site-packages/jinja2/asyncfilters.py", line 24
    yield item
    ^
SyntaxError: 'yield' inside async function

Compiling './lib/python3.5/site-packages/jinja2/asyncsupport.py'...
***   File "./lib/python3.5/site-packages/jinja2/asyncsupport.py", line 35
    yield event
    ^
SyntaxError: 'yield' inside async function

Listing './lib/python3.5/site-packages/markupsafe'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/urllib3'...
Listing './lib/python3.5/site-packages/urllib3/contrib'...
Listing './lib/python3.5/site-packages/urllib3/contrib/_securetransport'...
Listing './lib/python3.5/site-packages/urllib3/packages'...
Listing './lib/python3.5/site-packages/urllib3/packages/backports'...
Listing './lib/python3.5/site-packages/urllib3/packages/ssl_match_hostname'...
Listing './lib/python3.5/site-packages/urllib3/util'...
Listing './lib/python3.5/site-packages/urllib3-1.22.dist-info'...
Listing './lib/python3.5/site-packages/werkzeug'...
Listing './lib/python3.5/site-packages/werkzeug/contrib'...
Listing './lib/python3.5/site-packages/werkzeug/debug'...
Listing './lib/python3.5/site-packages/werkzeug/debug/shared'...
Listing './share'...
Listing './share/python-wheels'...
